tests/negative/test_decl_bad_type_cn.orb
fnc main() {
    i32 x = 100;
    i32 cn* a = &x;
    i32* b = a;
}